--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group = 'com'
+group = 'com.pokemon.ao'
 version = '0.0.1-SNAPSHOT'
 
 java {
