--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,17 @@
 #DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/pokemon_ao_db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring:
+  datasource:
+    username: 'root'
+    url: 'jdbc:mysql://localhost:3310/pokemon_ao_db'
+    password: 'root'
+  jpa:
+    properties:
+      hibernate:
+        dialect: 'org.hibernate.dialect.MySQLDialect'
+    hibernate:
+      ddl-auto: 'validate'
 
 #SERVIZI ESTERNI
-pokemon.daje.url=html://placeholder:8080 
+pokemon:
+  daje:
+    url: 'html://placeholder:8080'
