feat: adds the movesCount property representing the maximum number of known Moves and makes it available from the PropertyManager

--- a/src/main/resources/customProperties.yaml
+++ b/src/main/resources/customProperties.yaml
@@ -49,5 +49,8 @@ icons:
 #Known species
 speciesCount: 151
 
+#Known moves
+movesCount: 161
+
 #PokeApi URL
 pokeApiUrl: 'https://pokeapi.co/api/v2/pokemon/{id}'
