feature(DatabaseConnectionMonitor): adds a class that monitors the connection to the DB through a batch, configured via a property, and which interrupts the execution of the application in case the connection to the DB is interrupted and is not re-established in the next 30 seconds

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,3 +10,8 @@ spring:
         dialect: 'org.hibernate.dialect.MySQLDialect'
     hibernate:
       ddl-auto: 'validate'
+
+#Batch
+batch:
+  databaseConnectionMonitor:
+    fixedDelay: 6000
