--- a/src/main/resources/customProperties.yaml
+++ b/src/main/resources/customProperties.yaml
@@ -54,3 +54,9 @@ movesCount: 161
 
 #PokeApi URL
 pokeApiUrl: 'https://pokeapi.co/api/v2/pokemon/{id}'
+
+#MaxMoves per Pokemon
+maxMovesPerPokemon: 4
+
+#MinMoves per Pokemon
+minMovesPerPokemon: 1
