feature: changes the way we handle moves in a Pokemon, introducing the MoveSlot enum

--- a/src/main/resources/customProperties.yaml
+++ b/src/main/resources/customProperties.yaml
@@ -12,7 +12,8 @@ defaultPokemon:
   currentHp: 100
   maxHp: 100
   moves:
-    - id: 0
+    SLOT_1:
+      id: 0
       name: 'idropompa'
       type:
         id: 0
