feature: replaces the application.yaml file with application.properties by defining imports to import other properties files outside the 'src' folder and other specific configurations for the develop or deploy environment. Then it also adds the property files and scripts used by the app

--- a/utility/common-properties/customProperties.yaml
+++ b/utility/common-properties/customProperties.yaml
@@ -3,12 +3,12 @@ defaultPokemon:
   name: 'Gren'
   species:
     id: 0
-    spriteUrl: 'https://placeholder:8080/sprite'
-    name: 'Squirtle'
+    spriteUrl: 'https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/7.png'
+    name: 'squirtle'
     type:
       id: 0
-      name: 'acqua'
-      icon: 'https://placeholder:8080/acqua.png'
+      name: 'water'
+      icon: 'https://i.imgur.com/AITT6dU.png'
   currentHp: 100
   maxHp: 100
   moves:
@@ -17,10 +17,10 @@ defaultPokemon:
       name: 'idropompa'
       type:
         id: 0
-        name: 'acqua'
-        icon: 'https://placeholder:8080/acqua.png'
+        name: 'water'
+        icon: 'https://i.imgur.com/AITT6dU.png'
       power: 10
-  originalTrainer: 'default'
+  originalTrainer: 'Sgarbi'
 
 #Unknown Data Type Script Path
 unknownDataTypeScriptPath: 'C:\Users\vliguori\Desktop\PokemonAO\utility\db\unknownDataType.sql'
