feature: adds the Dockerfile to build the image from which we will run the container for the DB in the case of the develop environment, and the docker compose which will instead run two containers, one for the db and one for the application

--- a/utility/db/Dockerfile
+++ b/utility/db/Dockerfile
@@ -2,8 +2,7 @@ FROM mysql:5.7.15
 
 MAINTAINER Hadows
 
-ENV MYSQL_DATABASE=pokemon_ao_db \
-    MYSQL_ROOT_PASSWORD=root
+ENV MYSQL_DATABASE=pokemon_ao_db MYSQL_ROOT_PASSWORD=root
 
 ADD init.sql /docker-entrypoint-initdb.d
 
