chore: fix deploy/develop property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,4 @@
 #DEPLOY
-spring.config.import=file:/home/application.yaml
-path.customProperties=/home/customProperties.yaml
-path.unknownDataTypeScript=/home/unknownDataType.sql
-
-#DEVELOP
-#Uncomment the following lines and set basePath with the absolute path to the project directory
-#basePath=C:/path/to/your/project/directory
-#spring.config.import=file:/${basePath}/PokemonAO/utility/develop/application.yaml
-#path.customProperties=${basePath}/PokemonAO/utility/common-properties/customProperties.yaml
-#path.unknownDataTypeScript=${basePath}/PokemonAO/utility/db/unknownDataType.sql
+spring.config.import=file:./home/application.yaml
+path.customProperties=./home/customProperties.yaml
+path.unknownDataTypeScript=:./home/unknownDataType.sql
