--- a/utility/deploy/docker-compose.yaml
+++ b/utility/deploy/docker-compose.yaml
@@ -17,10 +17,10 @@ services:
     image: openjdk:17-jdk-slim
     container_name: pokemon_ao_application
     volumes:
-      - ../common-properties/customProperties.yaml:/home/customProperties.yaml
+      - ./properties/customProperties.yaml:/home/customProperties.yaml
       - ./properties/application.yaml:/home/application.yaml
-      - ./PokemonAO-0.0.1-SNAPSHOT.jar:/home/PokemonAO-0.0.1-SNAPSHOT.jar
-      - ../db/unknownDataType.sql:/home/unknownDataType.sql
+      - ./properties/PokemonAO-0.0.1-SNAPSHOT.jar:/home/PokemonAO-0.0.1-SNAPSHOT.jar
+      - ./properties/db/unknownDataType.sql:/home/unknownDataType.sql
     command: ["java", "-jar", "/home/PokemonAO-0.0.1-SNAPSHOT.jar"]
     depends_on:
       - pokemon_ao_db
