--- a/src/main/resources/customProperties.yaml
+++ b/src/main/resources/customProperties.yaml
@@ -82,3 +82,7 @@ minMovesPerPokemon: 1
 #Team random size
 teamSize: 6
 
+#PokemonExchangeCodes
+pokemonExchangeSuccessCode: 200
+pokemonExchangeInvalidCode: 400
+pokemonExchangeErrorCode: 500
