chore: change deploy/develop property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 #DEPLOY
-spring.config.import=file:./home/application.yaml
-path.customProperties=./home/customProperties.yaml
-path.unknownDataTypeScript=:./home/unknownDataType.sql
+spring.config.import=file:./properties/application.yaml
+path.customProperties=./properties/customProperties.yaml
+path.unknownDataTypeScript=./properties/unknownDataType.sql
