--- a/utility/deploy/docker-compose.yaml
+++ b/utility/deploy/docker-compose.yaml
@@ -1,29 +1,19 @@
 version: "3"
 services:
   pokemon_ao_db:
-    image: mysql:latest
+    image: hadows/pokemon_ao_db:2.1
     container_name: pokemon_ao_db
     networks:
       - common
     ports:
       - "3310:3306"
-    environment:
-      - MYSQL_DATABASE=pokemon_ao_db
-      - MYSQL_ROOT_PASSWORD=root
-    volumes:
-      - ../db/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   pokemon_ao_application:
-    image: openjdk:17-jdk-slim
+    image: hadows/pokemon_ao_application:0.1
     container_name: pokemon_ao_application
     volumes:
-      - ./properties/customProperties.yaml:/home/customProperties.yaml
-      - ./properties/application.yaml:/home/application.yaml
-      - ./properties/PokemonAO-0.0.1-SNAPSHOT.jar:/home/PokemonAO-0.0.1-SNAPSHOT.jar
-      - ./properties/db/unknownDataType.sql:/home/unknownDataType.sql
-    command: ["java", "-jar", "/home/PokemonAO-0.0.1-SNAPSHOT.jar"]
-    depends_on:
-      - pokemon_ao_db
+      - ./properties/customProperties.yaml:/home/properties/customProperties.yaml
+      - ./properties/application.yaml:/home/properties/application.yaml
     networks:
       - common
     ports:
