chore(customProperties.yaml): adds a property through which we can decide whether to start with an empty pokemon table or populated with data and updates the other customProperties.yaml for the deploy

--- a/properties/customProperties.yaml
+++ b/properties/customProperties.yaml
@@ -83,3 +83,6 @@ teamSize: 6
 pokemonExchangeSuccessCode: 200
 pokemonExchangeInvalidCode: 400
 pokemonExchangeErrorCode: 500
+
+#Populating pokemon table
+startWithEmptyPokemonTable: true
