feature(DataLoader): adds the loadPokemon method which, based on the startWithEmptyPokemonTable property, populates the pokemon table and pokemon_move by executing the insertPokemonData.sql script

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 spring.config.import=file:./properties/application.yaml
 path.customProperties=./properties/customProperties.yaml
 path.unknownDataTypeScript=./properties/unknownDataType.sql
+path.insertPokemonDataScript=./properties/insertPokemonData.sql
